================
(C) 2002-2024 the Amarok authors.

VERSION 3.0.2
  FEATURES:

  CHANGES:
   * Amarok now depends on KDE Frameworks 5.84.
   * Cleanup of unused code and various changes that improve Qt6 compatibility
     but shouldn't affect functionality.
   * Remove old derelict openDesktop.org integrations from about dialog. This also
     removes the dependency to Attica framework.

  BUGFIXES:
   * Fix saving and restoring playlist queue on quit / restart (BR 338741)
   * Fix system tray icon reordering
   * Fix erroneous apparent zero track progresses on track changes, which caused
     playcount updates and scrobbles to get skipped (BR 337849, 406701)
   * Fix 'save playlist' button in playlist controls
   * Sort playlist sorting breadcrumb menu by localized names (BR 277146)
   * Miscellaneous fixes to saving and loading various playlist file formats,
     resulting also in improved compatibility with other software
     (including BR 435779, BR 333745)


VERSION 3.0.1
  FEATURES:
   * Added an option to copy image to clipboard in Wikipedia applet, and a clickable
     notification if a non-Wikipedia link was clicked.
   * Added an option to select if track's artist is shown for entries under various
     artists / different album artist in context browser (BR 276039, BR 248101)
   * Indicate which search option is active in Wikipedia applet (BR 332010)

  CHANGES:
   * Amarok now depends on KDE Frameworks 5.78.
   * Improve strings in user interface (incl. BR 343896, BR 234854)
   * Reduce CPU usage by minimized/hidden analyzer (BR 390063) and other components.

  BUGFIXES:
   * Various tag match bias, APG and collection filtering related fixes (BR 375565,
     BR 406751, BR 435810, BR 382456)
   * Ignore any infinite values when reading replaygain tags (BR 486084)
   * Avoid volume getting set to 0 when phonon-vlc playback is stopped (BR 442319)
   * Playlist duplicate track deletion fixes (BR 313791)


VERSION 3.0.0
  FEATURES: